# avoidance-damper-pkg

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
avoidance_damper_pkg/: __init__.py  collision_damper_core.py  collision_damper_lifecycle_node.py  simple_collision_damper.py  viz_helper.py
cfg/: config01.rviz  install.sh
launch/: collision_damper.launch.py
